--- a/senti/templates/senti/index.html
+++ b/senti/templates/senti/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sentiment-Analysis</title>
 </head>
 
 <body>
     <form method="post" action="analysis/">
         {% csrf_token %}
         <textarea name="input_data" id="" cols="30" rows="10"></textarea>
+        <br>
         <input type="submit" value="OK">
     </form>
 </body>
