--- a/senti/templates/senti/index.html
+++ b/senti/templates/senti/index.html
@@ -1,18 +1,97 @@
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <title>Sentiment-Analysis</title>
+    <style>
+        body {
+            background-image: url("../media/bg2.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+
+        }
+
+        .loader {
+            border: 10px solid #f3f3f3;
+            /* Light grey */
+            border-top: 10px solid #3498db;
+            /* Blue */
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            animation: spin 2s linear infinite;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    </style>
+    <script>
+        function load() {
+            document.getElementById('ld').innerHTML = '<div class="loader"></div>'
+            return true;
+        }
+    </script>
+
 </head>
 
 <body>
-    <form method="post" action="analysis/">
-        {% csrf_token %}
-        <textarea name="input_data" id="" cols="30" rows="10"></textarea>
-        <br>
-        <input type="submit" value="OK">
-    </form>
+    <div class="container">
+
+        <marquee behavior="alternate">
+            <h1 style="color:darkblue ; font-weight: bold;  text-shadow: 2px 2px 8px cyan;">
+                Welcome to Our website
+            </h1>
+        </marquee>
+
+        <form method="POST" action="analysis/" onsubmit="load()" enctype="multipart/form-data">
+            {% csrf_token %}
+            <!-- <div class="form-group"> -->
+            <label for="exampleFormControlTextarea1"
+                style="font-weight: bold; font-size:xx-large; color:crimson;">Analyse
+                Your
+                text Emotion in just one click!
+                <p style="font-size: large; color:black;">You can predict emotions,sentiment of any text,file
+                    in
+                    just one step to go.
+                    upload your file or enter your text and get complete analysis of your text.
+                </p>
+            </label>
+            <textarea class="form-control" name="input_data" rows="8" style="background-color: aliceblue;"
+                placeholder="Enter your text"></textarea>
+            <br>
+            <input type="file" id="myFile" name="filename" accept=".pdf,.txt,.docx,.odt,.csv,.json,.html"
+                style="color: darkblue; font-weight: bold;">
+            <!-- </div> -->
+
+            <button type="submit" id='ld' class="btn btn-primary">Done!</button>
+        </form>
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
