--- a/senti/templates/senti/index.html
+++ b/senti/templates/senti/index.html
@@ -1,148 +1,313 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
 
     <title>Sentiment-Analysis</title>
     <style>
-        body {
-            background-image: url("../media/bg2.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
+      body {
+        
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
 
+      .loader {
+        border: 10px solid #f3f3f3;
+        /* Light grey */
+        border-top: 10px solid #3498db;
+        /* Blue */
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        animation: spin 2s linear infinite;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
         }
 
-        .loader {
-            border: 10px solid #f3f3f3;
-            /* Light grey */
-            border-top: 10px solid #3498db;
-            /* Blue */
-            border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            animation: spin 2s linear infinite;
+        100% {
+          transform: rotate(360deg);
         }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-
-            100% {
-                transform: rotate(360deg);
-            }
-        }
+      }
     </style>
     <script>
-        function load() {
-            document.getElementById('ld').innerHTML = '<div class="loader"></div>'
-            document.getElementById('ld1').innerHTML = '<div class="loader"></div>'
-            return true;
+      function move1() {
+        var elem = document.getElementById('myBar1')
+        rate = 10
+        var width = 0
+        var id = setInterval(frame, 70)
+        function frame() {
+          if (width >= 100) {
+            console.log(width)
+            clearInterval(id)
+            document.getElementById('myP1').className =
+            'w3-text-green w3-animate-opacity'
+            width = 0
+            id = setInterval(frame, 70-rate)
+            rate += 10
+            document.getElementById('myBar1').style.backgroundColor = '#'+(0x1000000+(Math.random())*0xffffff).toString(16).substr(1,6);
+
+          } else {
+            width++
+            elem.style.width = width + '%'          
+            document.getElementById('demo1').innerHTML = 'Analysing'
+            
+          }
         }
+      }
+      function move2() {
+        var elem = document.getElementById('myBar2')
+        var width = 0
+        var id = setInterval(frame, 70)
+        function frame() {
+          if (width >= 100) {
+            clearInterval(id)
+            document.getElementById('myP2').className =
+              'w3-text-green w3-animate-opacity'
+            width = 0
+            id = setInterval(frame, 70-rate)
+            rate += 10
+            document.getElementById('myBar1').style.backgroundColor = '#'+(0x1000000+(Math.random())*0xffffff).toString(16).substr(1,6);
+          } else {
+            width++
+            elem.style.width = width + '%'
+            document.getElementById('demo2').innerHTML = 'Analysing'
+          }
+        }
+      }
     </script>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="container">
+      <center>
+        <h1
+          class="mt-4 mb-2"
+          style="
+            color: crimson;
+            font-weight: bold;
+            text-shadow: 2px 2px 8px aliceblue;
+          "
+        >
+          Analysis of Text and Tweets!
+        </h1>
+        <img src="../media/a.png" style="width: 600px; height: 250px;" alt="" />
+      </center>
 
-        <center>
-            <h1 class="mt-4 mb-2" style="color:darkblue ; font-weight: bold;  text-shadow: 2px 2px 8px cyan;">
-                Welcome to Our website
-            </h1>
-        </center>
-
-        <label class="my-3" for="exampleFormControlTextarea1"
-            style="font-weight: bold; font-size:x-large; color:crimson;">
-            Why choose this tool?
-            <p style="font-size: large; color:black;">
-                The key aspect of this tool is to analyze body of text for undestanding the opinion expressed by
-                it.Typically, we quantify this sentiment with positive or negative value called polarity.
-            </p>
-            <div style="font-size: large; color:black;">
-                <p> >>Polarity probability prediction.</p>
-                <p> >>Analysis of Twitter tweets.</p>
-                <p> >>Analysis through of graphical report.</p>
-                <p>>>Word Cloud generation.</p>
-                <p> >>You can easily download report after analysis.</p>
-            </div>
-        </label>
-        <button type=" button" class="btn btn-info my-2 mx-2" onclick="tweetFunction()">Tweets Sentiment
-            Analysis</button>
-
-        <button type="button" class="btn btn-warning my-2 mx-2" onclick="textFunction()">Text Sentiment
-            Analysis</button>
-
-        <div id="show">
-            <div id="textDIV" style="display:none">
-                <form method="POST" action="textanalysis/" onsubmit="load()" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <textarea class="form-control my-2 mx-2" name="input_data" rows="8"
-                        style="background-color: aliceblue;" placeholder="Enter your text"></textarea>
-
-                    <input type="file" id="myFile" class="my-2 mx-2" name="filename"
-                        accept=".pdf,.txt,.docx,.odt,.csv,.json,.html" style="color: darkblue; font-weight: bold;">
-
-                    <button type="submit" id='ld1' class="btn btn-primary my-2 mx-2">Done!</button>
-                </form>
-            </div>
-
-            <div id="tweetDIV" style="display:none">
-                <form method="POST" action="tweetanalysis/" onsubmit="load()" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    <input class="form-control my-2 mx-2" name="tweet" style="background-color: aliceblue;"
-                        placeholder="Enter Keyword/Tag to search about: ">
-
-                    <input class="form-control my-2 mx-2" name="tweet_no" style="background-color: aliceblue;"
-                        placeholder="Enter how many tweets to search: ">
-
-                    <button type="submit" id='ld' class="btn btn-primary my-2 mx-2">Done!</button>
-                </form>
-            </div>
+      <label
+        class="my-3"
+        for="exampleFormControlTextarea1"
+        style="font-weight: bold; font-size: x-large; color: crimson;"
+      >
+        <p style="font-size: large; color: black;">
+          The key aspect of this tool is to analyze body of text and predict the
+          emotions expressed as positive, negative, or neutral.
+        </p>
+        <div style="font-size: large; color: black;">
+          <div class="row">
+            <div class="col-sm">
+            <p>
+            <h4 style="color: darkblue; font-weight: bold;">Features:-</h4>
+            >> Polarity probability prediction.
+            <br>
+            >> Analysis through of graphical report.
+            <br>
+            >> Analysis of Twitter tweets.
+            <br>
+            >> Word Cloud generation. 
+            <br>
+            >> You can easily download report
+            after analysis.
+          </p>
+        </div>
+        <div class="col-sm">
+            <img
+        src="../media/img2.jpg"
+        style="width: 360px; height: 220px;"
+        alt=""
+      />
+    </div>
 
         </div>
+        </div>
+      </label>
 
+    <div class="row">
+      <div class="col-sm">
+      <h3 style="color: darkblue; font-weight: bold;">Tweets Analysis</h3>
+    </div>
+    <div class="col-sm">
+      <button
+        type=" button"
+        class="btn btn-primary my-2 mx-2"
+        onclick="tweetFunction()"
+        style="width: 210px; height: 37px;"
+      >
+        Tweets Sentiment Analysis
+      </button>
+    </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-sm">
+      <h3 style="color: green; font-weight: bold;">Text Analysis</h3>
+    </div>
+    <div class="col-sm">
+      <button
+      type="button"
+      class="btn btn-success my-2 mx-2"
+      onclick="textFunction()"
+    >
+      Text Sentiment Analysis
+    </button>
+    </div>
+    </div>
+ 
+
+      <div id="show">
+        <div id="textDIV" style="display: none;">
+
+          <!-- textanalysis-1 -->
+          <form
+            method="POST"
+            action="textanalysis/"
+            onsubmit="move1();this.disabled='true'"
+            enctype="multipart/form-data"
+          >
+            {% csrf_token %}
+            <textarea
+              class="form-control my-2 mx-2"
+              name="input_data"
+              rows="8"
+              style="background-color: aliceblue;"
+              placeholder="Enter your text"
+            ></textarea>
+
+            <input
+              type="file"
+              id="myFile"
+              class="my-2 mx-2"
+              name="filename"
+              accept=".pdf,.txt,.docx,.odt,.csv,.json,.html"
+              style="color: darkblue; font-weight: bold;"
+            />
+            <div id="myP1">
+              <div class="w3-light-grey">
+                <center>
+                <div
+                  id="myBar1"
+                  class="w3-container"
+                  style="height: 24px; width: 0%; background-color:green"
+                ></div>
+              </div>
+              <span id="demo1" style="text-align: center;"></span>
+            </center>
+              <button type="submit" id="ld1" class="btn btn-danger my-2 mx-2">
+                Done!
+              </button>
+            </div>
+          </form>
+        </div>
+
+
+        <!-- tweetanalysis -->
+        <div id="tweetDIV" style="display: none;">
+          <form
+            method="POST"
+            action="tweetanalysis/"
+            onsubmit="move2();this.disabled='true'"
+            enctype="multipart/form-data"
+          >
+            {% csrf_token %}
+            <input
+              class="form-control my-2 mx-2"
+              name="tweet"
+              style="background-color: aliceblue;"
+              placeholder="Enter Keyword/Tag to search about: "
+            />
+
+            <input
+              class="form-control my-2 mx-2"
+              name="tweet_no"
+              style="background-color: aliceblue;"
+              placeholder="Enter how many tweets to search: "
+            />
+
+            <div id="myP2">
+              <div class="w3-light-grey">
+                <center>
+                <div
+                  id="myBar2"
+                  class="w3-container"
+                  style="height: 24px; width: 0%; background-color:green"
+                ></div>
+              </center>
+              </div>
+              <span id="demo2"></span>
+              <button type="submit" id="ld2" class="btn btn-danger my-2 mx-2">
+                Done!
+              </button>
+            </div>
+ 
+          </form>
+        </div>
+      </div>
     </div>
 
     <script>
-        var tweet = document.getElementById("tweetDIV");
-        var text = document.getElementById("textDIV");
-        function tweetFunction() {
-            if (tweet.style.display === "none") {
-                tweet.style.display = "block";
-                text.style.display = "none";
-            } else {
-                tweet.style.display = "none";
-            }
+      var tweet = document.getElementById('tweetDIV')
+      var text = document.getElementById('textDIV')
+      function tweetFunction() {
+        if (tweet.style.display === 'none') {
+          tweet.style.display = 'block'
+          text.style.display = 'none'
+        } else {
+          tweet.style.display = 'none'
         }
+      }
 
-        function textFunction() {
-            if (text.style.display === "none") {
-                tweet.style.display = "none";
-                text.style.display = "block";
-            } else {
-                text.style.display = "none";
-            }
+      function textFunction() {
+        if (text.style.display === 'none') {
+          tweet.style.display = 'none'
+          text.style.display = 'block'
+        } else {
+          text.style.display = 'none'
         }
+      }
     </script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
